updated create and deploy resources

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,6 +1,6 @@
-name: sample-flask
+name: clockwerx-app
 services:
 - name: web
   github:
-    repo: digitalocean/sample-flask
+    repo: oddeo/clockwerx-app
     branch: main
